crates/vexor-compiler/tests/golden/error/output/range.err
Error: evaluation error
   ╭─[ input:2:13 ]
   │
 2 │ val items = [5, 4..10]
   │             ─────┬────  
   │                  ╰────── range step direction is inconsistent with end.
───╯
